[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-ghaudit"
version = "0.1.1"
description = "Audit a GitHub org's security posture (branch rules, 2FA, secrets) from an export"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "ghaudit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/ghaudit"

[project.scripts]
"ghaudit-emit" = "ghaudit.connect:emit_main"
ghaudit = "ghaudit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ghaudit"]

[tool.hatch.metadata]
allow-direct-references = true
